# trash-compactor-collection

./: LICENSE.md  README.md  mvloc.config.jsonc  pyproject.toml
locale-machine/data/autoBlueprints.xml.append/: fr.po
locale-machine/data/blueprints.xml.append/: fr.po
locale-machine/data/dlcEvents_anaerobic.xml.append/: fr.po
locale-machine/data/events.xml.append/: fr.po
locale-machine/data/events_addon_icon.xml.append/: fr.po
locale-machine/data/events_avali.xml/: fr.po
locale-machine/data/events_echelon.xml/: fr.po
locale-machine/data/events_rsa.xml/: fr.po
locale-machine/data/events_sector_droppoint.xml.append/: fr.po
locale-machine/data/events_sector_freemantis.xml.append/: fr.po
locale-machine/data/events_sector_harmony.xml.append/: fr.po
locale-machine/data/events_sector_hive.xml.append/: fr.po
locale-machine/data/events_sector_laststand.xml.append/: fr.po
locale-machine/data/events_sector_pirate.xml.append/: fr.po
locale-machine/data/events_sector_showdown.xml.append/: fr.po
locale-machine/data/events_ships.xml.append/: fr.po
locale-machine/data/events_special_boons.xml.append/: fr.po
locale-machine/data/events_special_lightspeed.xml.append/: fr.po
machine-json/: machine-fr-1.2.6.json
src-en/data/: autoBlueprints.xml.append  blueprints.xml.append  events_addon_icon.xml.append  events_special_boons.xml.append  events_special_main.xml.append  events_special_multiverse.xml.append  events_special_storage.xml.append  hyperspace.xml.append  sector_data.xml.append  tcp_autogunboat_b.txt
src-en/mod-appendix/: metadata.xml
(+111 files in other folders)
